# bank-holiday-germany

./: CHANGELOG.md  LICENSE  README.md  bank-holiday-germany.cabal  stack.yaml
src/Data/Holiday/: Germany.hs
src/Data/Time/Calendar/BankHoliday/: Germany.hs
src/Data/Time/Calendar/BankHoliday/Germany/: ExtraHolidays.hs
src/Data/Time/Calendar/Holiday/: Germany.hs
test/: Main.hs
